# AgentScope

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_OS_COMPOSE.md  API_ENDPOINTS.md  ARCHITECTURE.md  BLAIQ_PHASE1_DIAGNOSTIC_REPORT.md  BLAIQ_PHASE2_FIXES_COMPLETE.md  Bewertungsmatrix.csv  BundBKo-Local-Dev.md  COOLIFY_DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOCKER_GUIDE.md  Dockerfile  FRONTEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  RAG-Score-english.csv  RAG_Testtemplate.csv  README.md  SKILL_BASED_ARCHITECTURE.md  VANGOGH_FINAL_FIXES.md  VANGOGH_MODE_FIX.md  VANGOGH_PREVIEW_FIX_COMPLETE.md  benchmark_performance.py  check_system.sh  config.prod.yaml  config.yaml  deploy-to-coolify.sh  docker-compose.agentic.yml  docker-compose.coolify.yml  docker-compose.optimized.yml  docker-compose.yml  hivemind_session_summary.md  original_pyproject.toml  output.json  profiler.py  (+9 more)
AgentScope-BLAIQ/: ARCHITECTURE.md  BLAIQ_SESSION_2026_04_25.md  PERSISTENCE_PLAN.md  PHASE_1_CONTRACTS.md  SKILLS.md  agentscope_blaiq.db  pyproject.toml
AgentScope-BLAIQ/deployment/: .env.example  Dockerfile  Dockerfile.frontend  bootstrap.py  docker-compose.coolify.yml  docker-compose.dev.yml  nginx.frontend.conf
AgentScope-BLAIQ/docs/: AGENT_FACTORY.md  Artifact_implementation.md  Artifact_workflow.md  agent&skills_db.md  agent_Aas_tool.md  content_director_agent_alignment.md  hivemind-mcp-tools-reference.md  vangogh_agent_alignment.md
AgentScope-BLAIQ/journal/: blaiq_enterprise.md  enterprise_frontend_checklist.md  journal.md  journal_aaas.md  journal_aaas_v2.md  kimi_database.md  kimi_frontend.md  markdown_preview_blueprint.md  navigation_ia_plan.md  recall_results.json
AgentScope-BLAIQ/logs/: logs.md
AgentScope-BLAIQ/scratch/: check_agent.py  check_chat_res_access.py  check_model_res.py  check_react.py  recall_res.json  test_agent_factory.py  test_create_poetry_agent.py  test_e2e_orchestration.py  test_prompt_to_agent.py  test_text_artifact.py  test_verseweaver_run.py
AgentScope-BLAIQ/scripts/: migrate_audit.py  test_skill_selection.py
AgentScope-BLAIQ/tests/: test_agent_contracts.py  test_agent_package_normalization.py  test_agent_resolver.py  test_blaiq_deep_research.py  test_brand_dna_extraction.py  test_chat_persistence.py  test_clarification.py  test_content_director.py  test_custom_agent_manifest.py  test_custom_agent_manifest_store.py  test_custom_agents.py  test_custom_executor.py  test_deployment.py  test_dispatch.py  test_e2e_contracts.py  test_e2e_workflow.py  test_enterprise_contracts.py  test_enterprise_schema.py  test_harnesses.py  test_hivemind_mcp.py  test_hivemind_stateful.py  test_manifest_store.py  test_messages.py  test_orchestration_hooks.py  test_planner_routing.py  test_recovery_loops.py  test_recovery_policies.py  test_regression_gate.py  test_research.py  test_role_based_nodes.py  test_role_based_routing.py  test_runtime_registry_custom_agents.py  test_strategic_catalog.py  test_text_buddy_v2.py  test_tool_harness_runtime.py  test_tool_telemetry.py  test_tui.py  test_van_gogh_v2.py  test_workflows.py
(+715 files in other folders)
